added update s83 added fitnessAPp.json

--- a/fitnessApp.json
+++ b/fitnessApp.json
@@ -2,8 +2,10 @@
     "endpoints": {
         "login":"/login",
         "register":"/register",
+        "details":"/details",
         "addWorkout": "/addWorkout",
         "getMyWorkouts":"/getMyWorkouts",
+        "getWorkoutById":"/getWorkoutById",
         "updateWorkout":"/updateWorkout",
         "deleteWorkout":"/deleteWorkout",
         "completeWorkoutStatus":"/completeWorkoutStatus"
